tests/NormalTests/paczka1/small_fuzzy/19654556.err
Error in line 2: a0SiqxK7usd S144 19,5
Error in line 4: RpTOwY5 S99 73,7
Error in line 7: a0SiqxK7usd S99 60,5
Error in line 12: xEv A321 5,7
